添加网络延迟配置

--- a/app.json
+++ b/app.json
@@ -52,5 +52,9 @@
         "selectedIconPath": "images/icon/个人中心_select.png"
       }
     ]
+  },
+  "networkTimeout": {
+    "request": 20000,
+    "downloadFile": 10000
   }
 }
